opam-version: "2.0"
name: "logonhours"
version: "dev"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/logonhours/"
bug-reports: "https://github.com/ghuysmans/logonhours/issues"
dev-repo: "git+https://github.com/ghuysmans/logonhours/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {>= "2.7"}
  "ppx_inline_test"
]
synopsis: "logonHours AD attribute manipulation library"
